Bug 167274 - Crash opening Image Map dialog
Summary: Crash opening Image Map dialog
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2025-06-27 14:58 UTC by Xisco Faulí
Modified: 2025-08-27 08:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt (11.24 KB, text/plain)
2025-06-27 19:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-06-27 14:58:05 UTC
Steps to reproduce:
1. Open Impress
2. Tools - Image Map

-> Crash

Reproduced in

Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 211c193b1c7391b4f1c1172214a90899de19b06a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-06-27 14:58:57 UTC
Regression introduced by:

commit 62b8ebe343ec49756fdbfddd0f22cb0b15296747	[log]
author	Michael Weghorn <m.weghorn@posteo.de>	Wed Feb 12 13:15:52 2025 +0100
committer	Michael Weghorn <m.weghorn@posteo.de>	Wed Feb 12 20:05:08 2025 +0100
tree da0ce03649b890bdca4815574c768ec203e62bb0
parent 2b773f238be02f1c4f92977349928908454ecd7e [diff]

GraphCtrl a11y: Use comphelper::OAccessibleComponentHelper
Comment 2 Julien Nabet 2025-06-27 19:54:40 UTC
Created attachment 201523 [details]
bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Michael Weghorn 2025-06-30 08:07:55 UTC
Thanks for the bibisect. Pending fix:
https://gerrit.libreoffice.org/c/core/+/187162
Comment 4 Commit Notification 2025-06-30 11:57:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fdffaac63c893694df950119790ace22972ec531

tdf#167274 svx: Set drawing area for ImageMap dialog early

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2025-06-30 12:29:44 UTC
Thank you Michael for the quick patch!
I confirm that after having updated my local repo (fdffaac63c893694df950119790ace22972ec531), it works now.
Comment 6 Commit Notification 2025-06-30 14:59:18 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/221dd89ad4366306067d2eb6d534ade05401c214

tdf#167274 svx: Set drawing area for ImageMap dialog early

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 emmataylor90 2025-08-27 08:39:47 UTC Comment hidden (spam)