svx/source/dialog/imapwnd.cxx
@@ -88,10 +88,10 @@ IMapWindow::~IMapWindow()
 
 void IMapWindow::SetDrawingArea(weld::DrawingArea* pDrawingArea)
 {
+    weld::CustomWidgetController::SetDrawingArea(pDrawingArea);
     Size aSize(pDrawingArea->get_ref_device().LogicToPixel(Size(270, 170), MapMode(MapUnit::MapAppFont)));
     pDrawingArea->set_size_request(aSize.Width(), aSize.Height());
     SetOutputSizePixel(aSize);
-    weld::CustomWidgetController::SetDrawingArea(pDrawingArea);
 
     SetSdrMode(true);
 
